--- a/pass/密码.md
+++ b/pass/密码.md
@@ -10,3 +10,37 @@
 	pass: ht |  7HJIv5kU
 	ht21: 10.254.2.25:1855 qms: jsqc
 	pass: sa | ht123
+
+
+sap
+
+IP 192.168.0.78
+编号 01
+系统表示QAS
+
+
+130:
+tqm  qmstest
+120 
+zcallrfc 1234567
+
+200:
+192.168.0.79
+ZCALLRFC / haday@123
+
+创建rfc流程
+1.se37 创建模块
+	开启远程
+	编辑代码
+2.se10 查看请求
+
+3.sci 检查错误
+
+	创建
+		请求 
+		变式 zcheck
+
+se10 提交请求
+
+
+
