--- a/pass/密码.md
+++ b/pass/密码.md
@@ -11,7 +11,12 @@
 	ht21: 10.254.2.25:1855 qms: jsqc
 	pass: sa | ht123
 
+prodGM db_readonly
+prodJS db_readonly/KdjhDf34#874WdyZ
 
+	
+
+	
 sap
 
 IP 192.168.0.78
@@ -20,13 +25,15 @@ IP 192.168.0.78
 
 
 130:
-tqm  qmstest
+	192.168.0.78
+	tqm  qmstest
 120 
-zcallrfc 1234567
+	192.168.0.78
+	zcallrfc 1234567
 
 200:
-192.168.0.79
-ZCALLRFC / haday@123
+	192.168.0.79
+	ZCALLRFC / haday@123
 
 创建rfc流程
 1.se37 创建模块
