--- a/pass/密码.md
+++ b/pass/密码.md
@@ -3,7 +3,7 @@
 	ht5: 10.254.2.25:1555
 	ht10: 10.254.2.25:1855
 	ht21: 10.254.2.25:1855 qms: jsqc
-	pass: sa | ht123
+	pass: sa | BFZybMAmaQ7P
 200
 	ht5: 192.168.15.58
 	ht10: 192.168.15.58:1855
@@ -14,10 +14,23 @@
 prodGM db_readonly
 prodJS db_readonly/KdjhDf34#874WdyZ
 
+正式OA qms / Qe97c)1.D56b
 
-haday
+haday 测试
 	lijl8/haday@0519
 
+ruoyi
+	lijl8/123456
+	yangzj2/123456
+	
+	设置项	测试环境配置	正式环境配置
+	内网服务地址	192.168.26.8	10.254.1.12
+	外网服务器地址	192.168.26.8	yami.haday.cn
+	端口	7081	7080
+
+	lijl8 haday@0519
+	liangzh2
+	chenwh3
 	
 sap
 
